feat: update plugin authors, improve logging, and enhance file handling in various modules fixed: invalid services on proxy